outputs/main/hsevo_bpp_online_2025-07-02_15-20-15/problem_iter20_response5.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 15
    priorities = bins_remain_cap + np.random.rand(len(bins_remain_cap]) * 0.0001
                                                                     ^
SyntaxError: closing parenthesis ']' does not match opening parenthesis '('
